--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,10 +15,8 @@ h1 {
 }
 
 .center {
-	margin-bottom: 0px;
-	margin-top: 0px;
-	margin-right: 0 auto;
-	margin-left: 0 auto;
+	margin: 0 auto;
+	width: 60%;
 }
 
 hr {
@@ -27,7 +25,7 @@ hr {
 	color: lightgrey;
 	background-color: lightgrey;
 	text-align: center;
-	width: 1000px;
+	width: 100%;
 
 }
 
@@ -41,4 +39,38 @@ li {
 
 ul {
 	line-height: 10px;
+}
+
+.tip {
+	display: block;
+	background-color: #def6ed;
+	border-radius: 4px;
+	line-height: 25px;
+	border: 20px;
+	padding: 20px;
+	margin: 25px;
+}
+
+.button {
+   	background-color: darkblue;
+   	border: none;
+    border-radius: 25px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+   	text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+a {
+	background-color: darkblue;
+   	border: none;
+    border-radius: 25px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+   	text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
