--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,10 +29,6 @@ hr {
 
 }
 
-img {
-	float: left;
-}
-
 li {
 	line-height: 40px;
 }
@@ -42,14 +38,12 @@ ul {
 }
 
 .tip {
-	display: block;
-	background-color: #def6ed;
-	border-radius: 4px;
-	line-height: 25px;
-	border: 20px;
-	padding: 20px;
-	margin: 25px;
+  background-color: #def6ed;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 25px;
 }
+
 
 .button {
    	background-color: darkblue;
@@ -65,7 +59,7 @@ ul {
 
 a {
 	background-color: darkblue;
-   	border: none;
+   	border-color: red;
     border-radius: 25px;
     color: white;
     padding: 15px 32px;
